# openAV-Fabla

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README  README.md  canvas.cxx  canvas.hxx  cpp_ui.h  dsp.cpp  fabla.c  fabla.cpp  fabla.cxx  fabla.ttl  fabla_ui.c  fabla_ui.cxx  fablapresets.ttl  header.h  makefile  manifest.ttl.in  run.sh  uris.h  uris.hxx  wscript
dsp/: adsr.hxx  denormals.hxx  dsp_compressor.hxx  dsp_dbmeter.hxx  fabla.c  fabla.cxx  fabla.ttl  manifest.ttl  ports.h  sample.hxx  shared.h  voice.hxx
fabla.lv2/: manifest.ttl
gtk/: TODO  canvas.hxx  debug.sh  fabla.cxx  fabla_ui.cxx  interposer.sh  uris.hxx
gtk/planning/: header.xcf
gui/: avtk.h  fabla.cxx  fabla.fl  fabla.h  fabla.hxx  fabla_ui.c  fabla_ui.cxx  header.c  header_flat.xcf  ui_helpers.cxx  ui_test.cxx
gui/avtk/: avtk_adsr.h  avtk_button.h  avtk_dial.h  avtk_image.h  avtk_lfo.h  avtk_light_button.h  avtk_opengl.h  avtk_pad.h  avtk_reverb.h  avtk_volume.h  avtk_waveform.h
presets/fablaSavageDrums.lv2/: README
